# CovidGo

./: .gitignore  README.md
Go/: Dockerfile  README.md  go.mod  go.sum  main.go
Go/public/: index.html
Go/public/js/: index.js
Go/src/: main.go
Python/: Dockerfile  README.md  main.py
Python/PythonGo/: Dockerfile  demo.py
Python/src/: main.py
Python/src/templates/: index.html
Python/static/: index.js  rust.js
Python/templates/: index.html  rust.html
Redis/: py_redis.py
Rust/: Cargo.toml  Dockerfile  README.md
Rust/src/: main  main.rs
Rust/static/: index.html
Rust/static/hidden/: hi.txt
Rust/static/js/: index.js
ServerGo/: Dockerfile  README.md  main.go
public/js/: index.js
src/: main.go
