[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["erflod5"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = "0.4.4"
cpu-monitor = "0.1.1"
rocket_cors = "0.5.0"
reqwest = "0.9.14"
tokio = "0.1.18"
futures = "0.1.21"

[dependencies.redis]
version = "*"